fixed icon overflow when reached max characters in tweet box

--- a/public/styles/text-tweet.css
+++ b/public/styles/text-tweet.css
@@ -1,6 +1,7 @@
 .container{
   width: 77%;
   margin-top: 10%;
+  margin-bottom: 10%;
 }
 
 /* Alert */
@@ -15,9 +16,10 @@
 }
 
 .tweet-box {
+  
   margin: 30px 0px;
   width: 100%;
-  height:250px;
+  height:100%;
   border:5px solid #000;
 }
 
@@ -57,6 +59,7 @@
   border-width:0;
   color:gray;
   background-color:gray;
+  margin-top: 10px;
 }
 
 .icon:hover{
@@ -65,7 +68,7 @@
 }
 
 .text{
-  margin:0 1.5em ;
+  margin:0 2em ;
   word-wrap: break-word; 
 }
 
